changed error html

--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@
   <body>
     <h1>About</h1>
     <p>This is the about page</p>
-    <form>
+    <div>
       <a href="http://localhost:8080/">
         <li>Home</li>
       </a>
       <a href="http://localhost:8080/contact-me">
         <li>Contact Me</li>
       </a>
-    </form>
+    </div>
   </body>
 </html>
