--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <h1>Home</h1>
     <p>This is the home page</p>
-    <form>
+    <div>
       <a href="http://localhost:8080/about">
         <li>About</li>
       </a>
       <a href="http://localhost:8080/contact-me">
         <li>Contact Me</li>
       </a>
-    </form>
+    </div>
   </body>
 </html>
