--- a/404.html
+++ b/404.html
@@ -8,5 +8,16 @@
 </head>
 <body>
   <h1>Error 404: Page Not Found</h1>
+  <div>
+    <a href="http://localhost:8080/">
+      <li>Home</li>
+    </a>
+    <a href="http://localhost:8080/about">
+      <li>About</li>
+    </a>
+    <a href="http://localhost:8080/contact-me">
+      <li>Contact Me</li>
+    </a>
+  </div>
 </body>
 </html>
