--- a/contact-me.html
+++ b/contact-me.html
@@ -9,13 +9,13 @@
   <body>
     <h1>Contact Me</h1>
     <p>This is the contacts page</p>
-    <form>
+    <div>
       <a href="http://localhost:8080/">
         <li>Home</li>
       </a>
       <a href="http://localhost:8080/about">
         <li>About</li>
       </a>
-    </form>
+    </div>
   </body>
 </html>
