--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <body>
   <h1>Error 404: Page Not Found</h1>
   <div>
-    <a href="http://localhost:8080/">
+    <a href="/">
       <li>Home</li>
     </a>
-    <a href="http://localhost:8080/about">
+    <a href="/about">
       <li>About</li>
     </a>
-    <a href="http://localhost:8080/contact-me">
+    <a href="/contact-me">
       <li>Contact Me</li>
     </a>
   </div>
