--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     <h1>About</h1>
     <p>This is the about page</p>
     <div>
-      <a href="http://localhost:8080/">
+      <a href="/">
         <li>Home</li>
       </a>
-      <a href="http://localhost:8080/contact-me">
+      <a href="/contact-me">
         <li>Contact Me</li>
       </a>
     </div>
