--- a/contact-me.html
+++ b/contact-me.html
@@ -10,10 +10,10 @@
     <h1>Contact Me</h1>
     <p>This is the contacts page</p>
     <div>
-      <a href="http://localhost:8080/">
+      <a href="/">
         <li>Home</li>
       </a>
-      <a href="http://localhost:8080/about">
+      <a href="/about">
         <li>About</li>
       </a>
     </div>
