--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Home</h1>
     <p>This is the home page</p>
     <div>
-      <a href="http://localhost:8080/about">
+      <a href="/about">
         <li>About</li>
       </a>
-      <a href="http://localhost:8080/contact-me">
+      <a href="/contact-me">
         <li>Contact Me</li>
       </a>
     </div>
