changed / to home

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <h1>About</h1>
     <p>This is the about page</p>
     <div>
-      <a href="/">
+      <a href="home">
         <li>Home</li>
       </a>
       <a href="contact-me">
