--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Error 404: Page Not Found</h1>
   <div>
-    <a href="/">
+    <a href="home">
       <li>Home</li>
     </a>
     <a href="about">
