--- a/contact-me.html
+++ b/contact-me.html
@@ -10,7 +10,7 @@
     <h1>Contact Me</h1>
     <p>This is the contacts page</p>
     <div>
-      <a href="/">
+      <a href="home">
         <li>Home</li>
       </a>
       <a href="about">
